Fix verify button on mobile to have white checkmark (#637)
* Fix verify button on mobile to have white checkmark

* Update checkmark

* Remove unused code

--- a/audius-client/packages/web/src/containers/settings-page/components/mobile/AccountSettingsPage.module.css
+++ b/audius-client/packages/web/src/containers/settings-page/components/mobile/AccountSettingsPage.module.css
@@ -52,8 +52,12 @@
   width: 20px;
 }
 
-.verificationBtn .verifiedIcon path {
-  fill: var(--primary);
+/** Verified icon should always be primary/white */
+.verificationBtn .verifiedIcon path:first-child {
+  fill: #cc0fe0 !important;
+}
+.verificationBtn .verifiedIcon path:nth-child(2) {
+  fill: white !important;
 }
 
 .isVerified .verifiedText {
